--- a/3DBall.yaml
+++ b/3DBall.yaml
@@ -1,11 +1,11 @@
 behaviors:
-  My agent:
+  My Behavior:
     trainer_type: sac
     hyperparameters:
       learning_rate: 0.0003
       learning_rate_schedule: constant
-      batch_size: 64
-      buffer_size: 200000
+      batch_size: 1024
+      buffer_size: 10240
       buffer_init_steps: 0
       tau: 0.005
       steps_per_update: 10.0
@@ -27,3 +27,4 @@ behaviors:
     max_steps: 200000
     time_horizon: 1000
     summary_freq: 12000
+    threaded: True
