--- a/3DBall.yaml
+++ b/3DBall.yaml
@@ -1,30 +1,47 @@
 behaviors:
   My Behavior:
-    trainer_type: sac
+    trainer_type: ppo
     hyperparameters:
+      batch_size: 2048
+      buffer_size: 20480
       learning_rate: 0.0003
-      learning_rate_schedule: constant
-      batch_size: 1024
-      buffer_size: 10240
-      buffer_init_steps: 0
-      tau: 0.005
-      steps_per_update: 10.0
-      save_replay_buffer: false
-      init_entcoef: 0.5
-      reward_signal_steps_per_update: 10.0
+      beta: 0.005
+      epsilon: 0.2
+      lambd: 0.95
+      num_epoch: 3
+      shared_critic: False
+      learning_rate_schedule: linear
+      beta_schedule: linear
+      epsilon_schedule: linear
+    checkpoint_interval: 500000
     network_settings:
-      normalize: true
-      hidden_units: 64
+      normalize: False
+      hidden_units: 128
       num_layers: 2
       vis_encode_type: simple
       memory:
         memory_size: 256
+        sequence_length: 64
+      goal_conditioning_type: hyper
+      deterministic: False
     reward_signals:
       extrinsic:
         gamma: 0.99
         strength: 1.0
+        network_settings:
+          normalize: False
+          hidden_units: 128
+          num_layers: 2
+          vis_encode_type: simple
+          memory: None
+          goal_conditioning_type: hyper
+          deterministic: False
+    init_path: None
     keep_checkpoints: 5
-    max_steps: 200000
-    time_horizon: 1000
-    summary_freq: 12000
+    even_checkpoints: False
+    max_steps: 500000
+    time_horizon: 64
+    summary_freq: 50000
     threaded: True
+    self_play: None
+    behavioral_cloning: None
